--- a/flight-planner-net/FlightPlanner/appsettings.json
+++ b/flight-planner-net/FlightPlanner/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "flight-planner": "Server=DESKTOP-FFUOVR9\\SQLEXPRESS;Database=flight-planner; Integrated Security = True; Trusted_Connection=True; TrustServerCertificate=True"
+  }
 }
